# capstone_camera_validation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Distortion.cpp  Distortion.hpp  Freeze.cpp  Freeze.hpp  Makefile  Output_UI.cpp  README.md  Socket.cpp  Translate.cpp  Translate.hpp  White.cpp  White.hpp  client1.cpp  client_2functional.cpp  client_full.cpp  cmake_install.cmake  compare_draft1.cpp  compare_draft3.cpp  corruption.cpp  freeze_and_white.cpp  full_corruption.cpp  gui.py  main.cpp  picture_shift.cpp  receive.cpp  reed_client.cpp  reed_server.cpp  send.cpp  server1.cpp  server2_functional.cpp  server_2functional.cpp  server_full.cpp  socket_error_mwe.cpp
Comparator/: CMakeCache.txt  CMakeLists.txt  Compare.cpp  Makefile  Socket.cpp  Socket.h  cmake_install.cmake  main.cpp  packet.proto
Comparator/proto/: packet.pb.cc  packet.pb.h
Comparator/socket/: PracticalSocket.cpp  PracticalSocket.h  config.h
Corruption/: CMakeCache.txt  CMakeLists.txt  Compare.cpp  Compare.hpp  Distortion.cpp  Makefile  Socket.h  cmake_install.cmake  config.h  corrupt  main.cpp  main_reed.cpp  packet.proto
Corruption/filters/: Distortion.hpp  Translate.hpp  White.cpp  White.hpp
Corruption/old/: server1.cpp  shift.cpp
Corruption/proto/: packet.pb.cc  packet.pb.h
TEST_GUI/: gui.py
WEB_UI/: GUI.html  gui.js  package-lock.json
corruption_scripts/: ffmpeg_fileinput.zsh  ffmpeg_fileinput_notpi.zsh  ffmpeg_v4l2_h264omx.zsh  picam_test.py  raspivid_ffplay.zsh
old/: freeze_and_white.cpp  freeze_image_1.cpp
web_ui/: GUI.html  gui.js  server.js
