cmake_minimum_required(VERSION 2.8)
project( corrupt )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( corrupt Distortion.hpp Distortion.cpp Freeze.hpp Freeze.cpp White.hpp White.cpp Translate.hpp Translate.cpp main.cpp)
target_link_libraries( corrupt ${OpenCV_LIBS}  )